# stripe-python

./: .coveragerc  .deepsource.toml  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .lgtm.yml  .travis.yml  API_VERSION  CHANGELOG  CHANGELOG.md  CODEGEN_VERSION  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  LONG_DESCRIPTION.rst  MANIFEST.in  Makefile  OPENAPI_VERSION  Pipfile  README.md  README.rdoc  Tcorp  VERSION  call_nested_resource_methods.py  constraints.txt  example.py  imports.txt  justfile  korbit-policies.yaml  main.py  mypy.ini  profile.py  proxy-example.py  pyproject.toml  pytest.ini  requirements.txt  sdk-lock.json  setup.cfg  setup.py  (+3 more)
.claude/: CLAUDE.md
.codeboarding/: API Data Model.md  API Error Handling.md  API Request & Transport.md  API Service Base.md  Core Utilities.md  Stripe API Services.md  Stripe Client.md  Webhook & Event Processing.md  on_boarding.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: ci.yml  pylint.yml  python-package.yml
examples/: README.md  charge.py  checkout.py  event_notification__webhook_handler.py  event_notification_handler_endpoint.py  event_notification_webhook_handler.py  meter_event_stream.py  new_example.py  oauth.py  proxy.py  raw_request.py  stripe_webhook_handler.py  thinevent_webhook_handler.py  webhooks.py
flake8_stripe/: flake8_stripe.py  flake8_stripe.py.orig  setup.py
korbir_review3/tests/: stripe_mock.py  test_exports.py  test_stripe_client.py  test_webhook.py
korbit/stripe/: _apple_pay_domain_service.py  _charge.py  _customer.py  _list_object.py  _payment_intent_service.py  _price.py  _price_service.py  _promotion_code_service.py  _review_service.py  _setup_intent_service.py  _source_service.py  _tax_code_service.py  _tax_id_service.py  _webhook_endpoint_service.py
korbit_rev/examples/: oauth.py
korbit_rev/tests/: test_multipart_data_generator.py  test_request_options.py
korbit_review/billing/: _alert.py  _meter_event_adjustment_service.py
korbit_review/examples/: example_template.py
korbit_review/stripe/: _account.py  _account_link_service.py  _api_requestor.py  _api_version.py  _coupon.py  _invoice_line_item_service.py  _invoice_service.py  _oauth_service.py  _payment_link.py  _plan_service.py  _requestor_options.py  _source_transaction_service.py  _subscription.py  _subscription_service.py  _tax_rate_service.py  _token_service.py  _topup_service.py
korbit_reviews/stripe/: _customer_cash_balance_service.py  _customer_funding_instructions_service.py  _discount.py  _dispute.py  _event_service.py  _exchange_rate_service.py  _http_client.py  _invoice_item_service.py  _invoice_rendering_template_service.py  _payout_service.py  _setup_attempt.py  _source.py  _subscription_item.py  _subscription_item_service.py  _tax_id.py  _util.py  _webhook_endpoint.py
stripe/: __init__.py  _account.py  _account_capability_service.py  _account_create_params.py  _account_external_account_service.py  _account_link.py  _account_link_service.py  _account_login_link_service.py  _account_notice.py  _account_notice_service.py  _account_person_service.py  _account_service.py  _account_session.py  _account_session_create_params.py  _account_session_service.py  _account_signals.py  _account_signals_service.py  _account_update_params.py  _any_iterator.py  _api_mode.py  _api_requestor.py  _api_resource.py  _api_version.py  _apple_pay_domain.py  _apple_pay_domain_service.py  _application.py  _application_fee.py  _application_fee_refund.py  _application_fee_refund_service.py  _application_fee_service.py  _apps_service.py  _balance.py  _balance_service.py  _balance_settings.py  _balance_settings_modify_params.py  _balance_settings_service.py  _balance_settings_update_params.py  _balance_transaction.py  _balance_transaction_service.py  _balance_transfer.py  (+312 more)
stripe/api_resources/: __init__.py  accepted_financing.py  account.py  account_link.py  account_notice.py  account_session.py  card.py  (+103 more)
test/: test_stripe.py
tests/: conftest.py  helper.py  http_client_mock.py  request_mock.py  stripe_mock.py  test_api_requestor.py  test_decimal_string.py  test_encode.py  test_error.py  test_event_notification_handler.py  test_event_router.py  test_exports.py  test_generated_examples.py  test_http_client.py  test_int64_string.py  test_integration.py  test_metadata.py  test_multipart_data_generator.py  test_oauth.py  test_oauth_error.py  test_preview.py  test_raw_request.py  test_request_options.py  test_request_signing.py  test_requestor_options.py  test_stripe_client.py  test_stripe_context.py  test_stripe_object.py  test_stripe_response.py  test_telemetry_id.py  test_util.py  test_v2_error.py  test_v2_event.py  test_v2_ref.py  test_webhook.py
typeshed_parity/: clone_typeshed.sh  generate_stubdiff.sh  pyi_sort.py
(+2444 files in other folders)
